# Desafio-Full-Stack-Developer

./: README.md  docker-compose.yaml
api/: .gitignore  Dockerfile  local.env  pyproject.toml  pytest.ini
api/scripts/: mongo-init.js
api/src/: config.py  main.py
api/src/api/: exception_handlers.py  routers.py
api/src/api/controllers/: rates.py  user.py
api/src/api/dependencies/: common.py  services.py
api/src/db/: database.py
api/src/db/repositories/: base.py  rates.py  user.py
api/src/services/: base.py  rates.py  token.py  user.py
api/src/services/exceptions/: exceptions.py
api/src/services/models/: rates.py  user.py
api/tests/: conftest.py
api/tests/test_api/: test_rates.py  test_user.py
api/tests/test_services/: test_rates.py  test_token.py  test_user.py
dashboard/: .gitignore  Dockerfile  package-lock.json  package.json  tailwind.config.js
dashboard/nginx/: default.conf
dashboard/public/: index.html
dashboard/src/: App.tsx  index.css  index.tsx
dashboard/src/components/: index.ts
dashboard/src/helpers/: index.ts  parse-JWT.ts  percent-value.ts
dashboard/src/hooks/: useLoading.ts
dashboard/src/layouts/: index.ts
dashboard/src/pages/: index.ts
dashboard/src/routes/: routes.tsx
rates-service/: .dockerignore  .gitignore  Dockerfile  local.env  pyproject.toml
rates-service/src/: config.py  main.py  service.py
rates-service/src/clients/: base_http.py
rates-service/src/clients/api/: client.py
rates-service/src/clients/cryptocompare/: client.py
rates-service/tests/: test_rates_service.py
(+31 files in other folders)
