[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
pydantic = {extras = ["email"], version = "^1.9.1"}
python-dotenv = "^0.20.0"
pymongo = "^4.1.1"
python-multipart = "^0.0.5"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
PyJWT = {version = "2.4.0", extras = ["cripto"]}
motor = "^3.0.0"

[tool.poetry.dev-dependencies]
atomicwrites = "^1.4.1"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
httpx = "^0.23.0"
pytest-mock = "^3.8.2"
requests = "^2.28.1"
pytest-env = "^0.6.2"
mongomock-motor = "^0.0.12"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
