[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.23.0"
pydantic = "^1.9.1"
python-dotenv = "^0.20.0"
APScheduler = "^3.9.1"
httpx-auth = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pre-commit = "^2.19.0"
pytest-mock = "^3.8.2"
pytest-asyncio = "^0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
